aksAGC/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-01
  namespace: test-infra
  annotations:
    alb.networking.azure.io/alb-id: /subscriptions/2542a31d-d50c-4c01-92d2-11c2e9432027/resourcegroups/rg-aks-agc-demo/providers/Microsoft.ServiceNetworking/trafficControllers/agc-aks-demo
    alb.networking.azure.io/alb-frontend: fe
spec:
  ingressClassName: azure-alb-external
  rules:
    - host: contoso.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-v1
                port:
                  number: 8080
    - host: fabrikam.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-v2
                port:
                  number: 8080
